--- a/index.html
+++ b/index.html
@@ -248,8 +248,12 @@
                     <div class="container">
                        <div class="Banner_Content">
                              <div class="Banner_child">
-                                 <h1>Burn one then burn all, trim your body to perfect shape,
-                                    By innovative and  reliable technique</h1>
+                                 <h1>
+                                    Slay with your glowing skin
+                                    Get the best skin treatment today.
+                                     <!-- Burn one then burn all, trim your body to perfect shape,
+                                    By innovative and  reliable technique -->
+                                </h1>
                                      <p>Get Advanced Laser Hair Reduction at CW</p>
                                      <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                              </div>
@@ -265,8 +269,12 @@
                     <div class="container">
                        <div class="Banner_Content">
                              <div class="Banner_child">
-                                 <h1>Take care of your hairs like never before,
-                                    Utilize the benefits of advanced PRP treatments.</h1>
+                                 <h1>
+                                    Slay with your glowing skin
+                                    Get the best skin treatment today.
+                                     <!-- Take care of your hairs like never before,
+                                    Utilize the benefits of advanced PRP treatments. -->
+                                </h1>
                                      <p>Get Advanced Laser Hair Reduction at CW</p>
                                      <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                              </div>
@@ -282,8 +290,12 @@
                     <div class="container">
                        <div class="Banner_Content">
                              <div class="Banner_child">
-                                 <h1>Never compromise with your looks ever again,
-                                    Get the best dermatologist with futuristic equipment.</h1>
+                                 <h1>
+                                     <!-- Never compromise with your looks ever again,
+                                    Get the best dermatologist with futuristic equipment. -->
+                                    Slay with your glowing skin
+                                    Get the best skin treatment today.
+                                </h1>
                                      <p>Get Advanced Laser Hair Reduction at CW</p>
                                      <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                              </div>
@@ -299,8 +311,12 @@
                     <div class="container">
                        <div class="Banner_Content">
                              <div class="Banner_child">
-                                 <h1>Tired of makeups every day? Try permanent fixtures,
-done using precise tools and advanced procedure.</h1>
+                                 <h1>
+                                     <!-- Tired of makeups every day? Try permanent fixtures,
+                                      done using precise tools and advanced procedure. -->
+                                      Slay with your glowing skin
+                                    Get the best skin treatment today.
+                                    </h1>
                                      <p>Get Advanced Laser Hair Reduction at CW</p>
                                      <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                              </div>
@@ -312,7 +328,7 @@ done using precise tools and advanced procedure.</h1>
         </section>
 
         <!-- Our ---services -->
-        <section class="Service_wrapper">
+        <section class="Service_wrapper"> 
             <div class="container">
                 <div class="Service_heading">
                     <h2>Our<span> Services</span></h2>
