--- a/index.html
+++ b/index.html
@@ -586,6 +586,11 @@
         </a>
       </div>
      <!--end--here-->
+         <!--bottom-- to---- top -->
+         <div class="BT-top" onclick="topFunction()" title="click to top" >
+            <a href="#" type="button" role="button"> <i class="fas fa-angle-up"></i></a>
+        </div>
+         <!-- end--here -->
      <!-- social--menu -->
      <div class="social-menu">
          <div class="show-social media-cmn">
@@ -601,11 +606,7 @@
             <i class="fas fa-caret-left" title="Hide social icon"></i>
          </div>
      </div>
-     <!-- end -->
-     <!--bottom-- to---- top -->
-     <div class="BT-top" onclick="topFunction()" title="click to top" >
-        <a href="#" type="button" role="button"> <i class="fas fa-angle-up"></i></a>
-    </div>
+     <!-- end --> 
 
         <!-- foooter-->
               <footer>
