--- a/thread.html
+++ b/thread.html
@@ -227,10 +227,7 @@
                         <h1>Thread lift</h1>
                             <p>Lorem ipsum dolor sit amet consectetur 
                                adipisicing elit. Vitae, ducimus.
-                               adipisicing elit. Vitae, ducimus.
-                               Lorem ipsum dolor sit amet consectetur 
-                               adipisicing elit. Vitae, ducimus.
-                               adipisicing elit. Vitae, ducimus.</p>
+                               adipisicing elit. Vitae, ducimus. </p>
                             <ul class="breadcrumb">
                                 <li><a href="index.html">Home</a></li>
                                 <i class="fas fa-chevron-right"></i>
@@ -412,7 +409,21 @@
     </section>
     <!-- end-----here -->
 
-
+          
+   <!-- whats--appp--sticky -->
+   <div class="wtsapp-sticky-wrp">
+    <a href="https://api.whatsapp.com/send?phone=919625001862" class="float" target="_blank">
+         <!-- <img src="image/Whatsapp1.png" alt="img"> -->
+         <i class="fab fa-whatsapp my-float"></i>
+    </a>
+  </div>
+ <!--end--here-->
+     <!--bottom-- to---- top -->
+     <div class="BT-top" onclick="topFunction()" title="click to top" >
+        <a href="#" type="button" role="button"> <i class="fas fa-angle-up"></i></a>
+    </div>
+     <!-- end--here -->
+     
     <!-- foooter-->
         <footer>
             <div class="container">
