--- a/premanentmakeup.html
+++ b/premanentmakeup.html
@@ -458,7 +458,19 @@
         </div>
     </section>
     <!-- end-----here -->
-
+  <!-- whats--appp--sticky -->
+  <div class="wtsapp-sticky-wrp">
+    <a href="https://api.whatsapp.com/send?phone=919625001862" class="float" target="_blank">
+         <!-- <img src="image/Whatsapp1.png" alt="img"> -->
+         <i class="fab fa-whatsapp my-float"></i>
+    </a>
+  </div>
+ <!--end--here-->
+     <!--bottom-- to---- top -->
+     <div class="BT-top" onclick="topFunction()" title="click to top" >
+        <a href="#" type="button" role="button"> <i class="fas fa-angle-up"></i></a>
+    </div>
+     <!-- end--here -->
 
     <!-- foooter-->
         <footer>
