--- a/prpface.html
+++ b/prpface.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
 </head>
 <body>
-    <main class="Slimming_Wrapper Filler_Wrapper Organic_Wrapper Thread_Wrapper Prp_Wrapper">
+    <main class="Slimming_Wrapper Filler_Wrapper Organic_Wrapper Thread_Wrapper Prp_Wrapper PrpFace_Wrapper">
         <header>
             <div class="top-social-bar">
                 <div class="child-wrp">
@@ -227,9 +227,6 @@
                         <h1>PRP Face Treatment </h1>
                             <p>Lorem ipsum dolor sit amet consectetur 
                                adipisicing elit. Vitae, ducimus.
-                               adipisicing elit. Vitae, ducimus.
-                               Lorem ipsum dolor sit amet consectetur 
-                               adipisicing elit. Vitae, ducimus.
                                adipisicing elit. Vitae, ducimus.</p>
                             <ul class="breadcrumb">
                                 <li><a href="index.html">Home</a></li>
@@ -419,6 +416,19 @@
     </section>
     <!-- end-----here -->
 
+   <!-- whats--appp--sticky -->
+   <div class="wtsapp-sticky-wrp">
+    <a href="https://api.whatsapp.com/send?phone=919625001862" class="float" target="_blank">
+         <!-- <img src="image/Whatsapp1.png" alt="img"> -->
+         <i class="fab fa-whatsapp my-float"></i>
+    </a>
+  </div>
+ <!--end--here-->
+     <!--bottom-- to---- top -->
+     <div class="BT-top" onclick="topFunction()" title="click to top" >
+        <a href="#" type="button" role="button"> <i class="fas fa-angle-up"></i></a>
+    </div>
+     <!-- end--here -->
 
     <!-- foooter-->
         <footer>
