--- a/prpface.html
+++ b/prpface.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Looking for a Creative, Result Oriented &amp; ROI Driven Digital Marketing Agency for your Brand or Business. Connect with us.">
-    <title>PRP Treatment</title> 
+    <title>PRP Face Treatment</title> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fonts/stylesheet.css">
     <link rel="stylesheet" href="css/Hover-master/css/hover-min.css">
