--- a/terms.html
+++ b/terms.html
@@ -229,7 +229,7 @@
             <section class="Slim_Service Filler-Service Prp-service">
                 <div class="container">
                     <div class="slim-heading">
-                        <h2>Terms & conditions <span></span></h2>
+                        <h2>Terms &  <span>conditions</span></h2>
                     </div>
                     <div class="Slim_content">
                         <p>
@@ -259,7 +259,7 @@
             Privacy_wrp tersm_wrp">
                 <div class="container">
                     <div class="Benefit-heading">
-                        <h2>Tracking Technologies and Cookies</h2>
+                        <h2>Tracking Technologies <span> and Cookies</span></h2>
                     </div>
                     <div class="Benefit-content Organic-Cnt Prp_hair hair-Laser01">   
                         <p>
