--- a/privacy.html
+++ b/privacy.html
@@ -229,7 +229,7 @@
             <section class="Slim_Service Filler-Service Prp-service">
                 <div class="container">
                     <div class="slim-heading">
-                        <h2>Privacy  Policy <span></span></h2>
+                        <h2>Privacy   <span>Policy</span></h2>
                     </div>
                     <div class="Slim_content">
                         <p>
@@ -258,7 +258,7 @@
             Privacy_wrp">
                 <div class="container">
                     <div class="Benefit-heading">
-                        <h2>Tracking Technologies and Cookies</h2>
+                        <h2>Tracking Technologies  <span>and Cookies</span></h2>
                     </div>
                     <div class="Benefit-content Organic-Cnt Prp_hair hair-Laser01">   
                         <p>
