--- a/botox.html
+++ b/botox.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <main class="Slimming_Wrapper Filler_Wrapper Organic_Wrapper Thread_Wrapper Prp_Wrapper
-     Scalp_Wrapper MicroDerma_Wrapper Cosmo_Wrapper HairLaser-Wrapper Botox_Wrapper">
+     Scalp_Wrapper MicroDerma_Wrapper Cosmo_Wrapper HairLaser-Wrapper Botox_Wrapper Organic_Wrapper">
         <header>
             <div class="top-social-bar">
                 <div class="child-wrp">
@@ -247,21 +247,37 @@
     <div class="Main-content-Wrapper Main-Filler-content Main-Prp-content Scalp-content Main-hairLaser-content
     Main-Botox-content">
             <!-- Slim--Service --> 
-            <section class="Slim_Service Filler-Service Prp-service">
+            <section class="Slim_Service Filler-Service Prp-service Org_wrp">
                 <div class="container">
                     <div class="slim-heading">
                         <h2> <span>BOTOX</span></h2>
                     </div>
-                    <div class="Slim_content">
+                    <div class="Slim_content Organic-Cnt">
                         <p>
-                            Look in the mirror and smile at a younger looking YOU! BOTOX is a safe, painless US-FDA approved procedure that enhances facial features and restores plumpness of the skin. It visibly reduces fine lines and wrinkles, making your face look and feel young in a matter of minutes. This treatment can be used for contouring the face, nose, jaw line, cheeks, lips and for smoothening skin under the eyes. 
+                            Botox is a purified protein extracted from bacteria botulinum toxin. Botox is not a product it’s a brand in itself. The naturally occurring purified protein can temporarily relax facial muscles causing lines and wrinkles. 
+                         <b>Botox skin treatment </b>
+                         is a popular US FDA approved wrinkles reduction treatment. It has been used widely for two decades for cosmetic implications. The areas treated using Botox are- 
                         </p>
-                        <h2>
-                            How does Botox Treatment help?
-                        </h2>
-                        <p>
-                            BOTOX Cosmetic is a USA FDA-approved treatment that helps to temporarily treat frown lines and wrinkles in adults. These injections are effective on mild to severe age lines. The botulinum toxin or Botox is made from a neurotoxin produced by the bacterium Clostridium botulinum. Although Botox is medically prescribed for treating muscular issues, it is cosmetically used as a temporary anti-aging solution.
-                        </p>
+                         <ul>
+                             <li>Horizontal forehead lines</li>
+                             <li>Bunny lines</li>    
+                             <li>Frown lines</li>
+                             <li>Gummy smile</li>
+                             <li>Chin creasing</li>
+                             <li>Downturned corner of lips</li>
+                             <li>Necklines</li>
+                             <li>Sagging jowls</li>
+                             <li>Eyebrow shaping</li>
+                             <li>Jawline shaping</li>
+                             <li>Cheek reduction</li>
+                             <li>Improving facial contour</li>
+                             <li>Excessive sweating (Hyperhidrosis)</li>
+                             <li>Migraine</li>
+                             <li>Flared nostril</li> 
+                         </ul>
+                         <p>
+                            Note- Not recommended for pregnant ladies and breastfeeding mothers.
+                         </p>
                     </div>
                 </div>
             </section> 
@@ -271,17 +287,25 @@
             <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2 hairLaser_wrp">
                 <div class="container">
                     <div class="Benefit-heading">
-                        <h2>BOTOX Helps Patients <span> Look and Feel Better  </span></h2>
+                        <h2>Botox helps you<span> look and feel young.  </span></h2>
                     </div>
                     <div class="Benefit-content Organic-Cnt Prp_hair hair-Laser01">   
                         <p>
-                            Botox injections are noted primarily for the ability to reduce the appearance of facial wrinkles. They're also used to treat conditions such as neck spasms (cervical dystonia), excessive sweating (hyperhidrosis), an overactive bladder and lazy eye. Botox injections may also help prevent chronic migraines.
+                            Botox injections are regarded fundamentally for the capacity to reduce the appearance of facial wrinkles. Injection of Botox relaxes specific muscles in the forehead to reduce or wholly eliminate scowling and wrinkling within a single session. After the treatment, you will not be able to wrinkle your brow, either on purpose or unconsciously because the muscles won't contract. As a result of this, you will look younger and more rejuvenated. However, limiting the dosages of Botox, we can controllably reduce the wrinkles according to your wish. With regular and repeated treatments, you can entirely remove wrinkles for a longer time. 
                         </p>
                         <p>
-                            Botox relaxes certain muscles in the forehead to reduce or fully eliminate scowling and wrinkling within a single appointment. Since you cannot wrinkle your brow, either on purpose or unconsciously, because the muscles won’t contract, you’re going to appear youthful and rejuvenated. Ultimately, with regular or biannual Botox injections, you are less likely to create patterns of wear and tear on your face over time.
-                        </p>
-                        <p>
-                            If you’re concerned with preserving your expressive brow, we can use a different pattern of injections and lower dosage. However, Botox works for prevention, reduction, and maintenance. When you come into our office for a consultation, we'll ask about your goals, desires, concerns, and past experiences tailoring a treatment plan to meet your individual needs.
+                            Using very precise, small and sterile needles, a qualified and trained professional injects Botox into the area of concern, to soften the expression lines and not freeze the face. Dosages given to a patient decided after several examinations and the patient's desires. The results vary from person to person. Effects lasting for 4-6 months it takes only 3-10 days after the treatment to be visible. The treatment procedure takes less than 10 minutes. 
+                        </p> 
+                    </div>
+                    <div class="Benefit-heading">
+                        <h2>Cost of Botox <span> Skin Treatment? </span></h2>
+                    </div>
+                    <div class="Benefit-content Organic-Cnt Prp_hair hair-Laser01">   
+                         <p>
+                            What should be the cost of such miraculous therapy, that can make you look younger? Well, it varies, depending on various factors. Firstly, the 
+                            <b>Botox treatment in Gurgaon </b>
+                            cost depends on the type of Botox used branded Botox will cost higher than a common Botox. Other than that, Botox cost may increase as per units used. Also, the important factor is the dermatologist you consult with, an experienced practitioner will cost you higher as the results 
+                            you will get will be exceptional. If you prefer an inexperienced surgeon, there lies a possibility that results will disappoint you. So, take your call wisely. 
                         </p>
                     </div>
                 </div>
