--- a/hairlaser.html
+++ b/hairlaser.html
@@ -252,15 +252,17 @@
                         <h2>LASER HAIR  <span>REMOVAL</span></h2>
                     </div>
                     <div class="Slim_content">
-                        <p>
-                            Silky smooth skin! Who doesn’t want it today? But all those shaving, waxing, and tweezing procedures are difficult to get done repeatedly in a day to day life. Laser Hair Removal is one of the medical & cosmetic procedures that make the task easier and remove unwanted skin hairs permanently. So that you can wear your favorite denim shorts and sleeveless tops anytime you want.
-                        </p>
-                        <h2>
-                            How does Laser Hair Removal help?
-                        </h2>
-                        <p>
-                            Laser hair removal is the process of hair removal by means of exposure of skin to pulses of laser light. The laser light is transmitted to the skin which is absorbed by the melanin in hair root and helps to damage the hair follicles that produce hairs. It is important for you to know that laser hair removal is not a one-day process, it requires several sittings to get the desired results.
-                        </p>
+                     <p>
+                          the most commonly used cosmetic procedures all around the world. 
+                     </p>
+                     <h2>
+                        What is Laser Hair Removal and how does it help?
+                     </h2>
+                     <p>
+                        In laser hair removal procedure, we direct a highly concentrated beam of light into the hair follicles. The melanin pigment in the hair follicles absorb the light from the laser and destroy the follicular cells. This method works permanently on 70-80% of patients. The procedure of hair removal can safely and successfully be conducted on all body parts without any side effects. All this can be achieved at the best price of 
+                        <b>laser hair removal in Gurgaon.</b>
+                         Mostly women prefer treatment of upper lip, chin, sideburns, forehead, full face, underarms, legs, back and bikini line and many going for whole-body laser hair removal. While men mostly go for treatment of arms, chest, abdomen, shoulder and back, extra beard area and ears. Recently we have started getting request for full body hair removals from men also. 
+                     </p>
                     </div>
                 </div>
             </section> 
@@ -274,17 +276,15 @@
                     </div>
                     <div class="Benefit-content Organic-Cnt Prp_hair hair-Laser01">   
                         <p>
-                            Removal of hair by means of laser light is a safe procedure. In addition to the removal of unwanted hair, this technique offers some advantages over other traditional procedures of hair removal.
+                            Laser hair removal is the best technique for permanent hair removal. So to mention some of the benefits of laser hair removal-
                         </p>
                         <ul>
-                            <li>Can be used to treat unwanted hair from face, leg, arm, underarms, and other areas without any significant pain. </li>
-                            <li>Removes hair safely without causing any skin damage.</li>
-                            <li>The speedy procedure as laser light can remove a significant fraction of hairs in short time.</li>
-                            <li>Laser hair removal results in permanent reduction of hairs. Some hairs which are left after treatment are lighter and thinner compared to the baseline.</li>
-                            <li>Restores normal range of motion and physical function</li>
-                            <li>It damages the hair follicles stopping the growth of new hair without affecting the skin tone or texture.
-                            </li>
-                            <li>Best results are obtained in people with light skin and darker hair, but good enough response can be achieved in people with other skin color types too.</li> 
+                          <li>	It is the easiest and quickest way of removing unwanted hairs. The sessions depend on the area of skin to operate. The less the skin area lesser the time it takes.</li>
+                          <li>	It's the most painless way of hair removal. Depending on your threshold of pain, you may find it somewhat painful. But it is so fast that most of the people can easily bypass it.</li>
+                          <li> It can precisely target the remotest and sensitive areas of the body, removing hairs without any difficulty. </li>
+                          <li> Damaging the hairs from the roots, it prevents ingrown hairs.</li>
+                         <li>  Even between the intervals of long haul sessions, you can enjoy smooth, hair-free skin all the times.</li>
+                          <li> 	Not being totally permanent but with regular touch-ups, you can get rid of those unwanted hairs permanently.</li>
                         </ul>
                         <div class="subhair-trt-wrp">
                             <div class="hair-Lft hair_trt-cmn01">
@@ -313,7 +313,22 @@
                     </div>
                 </div>
             </section>
-            
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp Cosmo_Wrp2 hairLaser_wrp">
+                <div class="container">
+                    <div class="Benefit-heading">
+                        <h2>Laser hair removal  <span>cost in Gurgaon?  </span></h2>
+                    </div>
+                    <div class="Benefit-content Organic-Cnt Prp_hair hair-Laser01">   
+                        <p>
+                            Laser hair removal is becoming so popular nowadays that we see visitors very often in our clinic. The charges of the laser hair removal treatment generally vary due to certain factors like equipment used, doctor's experience, the number of doctors involved etc. The 
+                            <b>Laser hair removal cost in Gurgaon  </b> 
+                            is not sky-high, so you can easily afford it. Our skin experts will, however, recommend you not to miss even a single session. Each and every session counts for better removal of the hairs so try to co-operate for fruitful results. 
+                            <b>. Laser hair removal cost </b> 
+                            can also be inquired directly via our clinic's phone number. 
+                        </p> 
+                    </div>
+                </div>
+            </section>
     </div> 
         
    <!-- ----Enquery -->
