--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
 </head>
 <body>
-    <main>
+    <main  class="wow fadeIn"  style="visibility: visible;">
         <header>
             <div class="top-social-bar">
                 <div class="child-wrp">
@@ -223,7 +223,7 @@
            </div>
         </header>
         <!-- banner -->
-        <section class="Banner_Wrapper">
+        <section class="Banner_Wrapper wow fadeIn"  style="visibility: visible;">
             <div class="banner-child slider1  owl-carousel">
                 <div class="banner-sub-child">
                     <figure>
@@ -234,7 +234,7 @@
                             <div class="Banner_child">
                                 <h1>Slay with your glowing skin
                                     Get the best skin treatment today.</h1>
-                                    <p>Get Advanced Laser Hair Reduction at CW</p>
+                                    <p> Advanced skin treatment at cosset world</p>
                                     <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                             </div>
                         </div>
@@ -249,12 +249,11 @@
                        <div class="Banner_Content">
                              <div class="Banner_child">
                                  <h1>
-                                    Slay with your glowing skin
-                                    Get the best skin treatment today.
+                                    Burn one then burn all, trim your body to perfect shape, 
                                      <!-- Burn one then burn all, trim your body to perfect shape,
                                     By innovative and  reliable technique -->
-                                </h1>
-                                     <p>Get Advanced Laser Hair Reduction at CW</p>
+                                </h1> 
+                                     <p>  By innovative and  reliable technique	</p>
                                      <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                              </div>
                          </div>
@@ -266,16 +265,16 @@
                     <figure>
                         <img src="image/hair.png" alt="img">
                     </figure>
-                    <div class="container">
+                    <div class="container"> 
                        <div class="Banner_Content">
                              <div class="Banner_child">
                                  <h1>
-                                    Slay with your glowing skin
-                                    Get the best skin treatment today.
+                                    Take care of your hairs like never before,
                                      <!-- Take care of your hairs like never before,
                                     Utilize the benefits of advanced PRP treatments. -->
                                 </h1>
-                                     <p>Get Advanced Laser Hair Reduction at CW</p>
+                                     <p>
+                                        Utilize the benefits of advanced PRP treatments.</p>
                                      <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                              </div>
                          </div>
@@ -291,12 +290,12 @@
                        <div class="Banner_Content">
                              <div class="Banner_child">
                                  <h1>
-                                     <!-- Never compromise with your looks ever again,
-                                    Get the best dermatologist with futuristic equipment. -->
-                                    Slay with your glowing skin
-                                    Get the best skin treatment today.
+                                     Never compromise with your looks ever again,
+                                    <!-- Slay with your glowing skin
+                                    Get the best skin treatment today. -->
                                 </h1>
-                                     <p>Get Advanced Laser Hair Reduction at CW</p>
+                                     <p>
+                                        Get the best dermatologist with futuristic equipment.</p>
                                      <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                              </div>
                          </div>
@@ -312,12 +311,12 @@
                        <div class="Banner_Content">
                              <div class="Banner_child">
                                  <h1>
-                                     <!-- Tired of makeups every day? Try permanent fixtures,
-                                      done using precise tools and advanced procedure. -->
-                                      Slay with your glowing skin
-                                    Get the best skin treatment today.
+                                     Tired of makeups every day? Try permanent fixtures,
+                                      <!-- Slay with your glowing skin
+                                    Get the best skin treatment today. -->
                                     </h1>
-                                     <p>Get Advanced Laser Hair Reduction at CW</p>
+                                     <p>
+                                        done using precise tools and advanced procedure.</p>
                                      <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                              </div>
                          </div>
@@ -328,7 +327,7 @@
         </section>
 
         <!-- Our ---services -->
-        <section class="Service_wrapper"> 
+        <section class="Service_wrapper wow fadeIn"  style="visibility: visible;"> 
             <div class="container">
                 <div class="Service_heading">
                     <h2>Our<span> Services</span></h2>
@@ -408,7 +407,7 @@
         <!-- end-----here -->
 
         <!-- About---section---- -->
-          <section class="About_Wrapper">
+          <section class="About_Wrapper wow fadeIn"  style="visibility: visible;">
              <div class="container">
                  <div class="About_Content">
                       <div class="Abt_left Abt_cmn01">
@@ -425,7 +424,7 @@
         <!-- end---here -->
 
         <!-- Book an Appointment -->
-        <section class="Appointment_Wrapper">
+        <section class="Appointment_Wrapper wow fadeIn"  style="visibility: visible;">
             <div class="Appointment_child">
                 <div class="container">
                     <div class="Appointment_Content">
@@ -436,7 +435,7 @@
                         <div class="Apt_right Apt_Cmn01">
                             <h2>Book an <span>Appointment</span></h2>
                             <p>What can be more exciting. Get Free Consultation with our dermatologists, weight-loss specialists and nutritionists - every time! . Call us to book an appointment at our clinic</p>
-                            <a href="#">Book an Appointment</a>
+                            <a  data-scroll  href="#Appointment_Form_wrp">Book an Appointment</a>
                         </div>
                     </div>
                 </div>
@@ -444,7 +443,7 @@
         </section>
         <!-- end--here -->
         <!-- testimonials -->
-            <section class="Testimonial_Wrapper">
+            <section class="Testimonial_Wrapper wow fadeIn"  style="visibility: visible;">
                 <div class="container">
                     <div class="Testimonial_heading">
                         <h2>Our <span>client says</span></h2>
@@ -491,7 +490,7 @@
         <!-- end---here -->
 
         <!-- form--wrp-->
-        <section class="Appointment_Form_wrp">
+        <section class="Appointment_Form_wrp wow fadeIn"  style="visibility: visible;" id="Appointment_Form_wrp">
             <div class="container">
                 <div class="Apt_heading">
                     <img src="image/Apt1.png" alt="image">
@@ -508,7 +507,7 @@
                                 <label for="#">Mobile number</label>
                                 <input type="number" name="number" id="" placeholder="10 digit number" autocapitalize="off">
                             </div>
-                            <div class="Fa3 Frm_cmn01">
+                            <!-- <div class="Fa3 Frm_cmn01">
                                 <label for="#">category</label>
                                 <select name="selectCategory" id="Category1">
                                     <option value="#">
@@ -521,8 +520,8 @@
                                         Lorem, ipsum.
                                     </option>
                                 </select>
-                            </div>
-                            <div class="Fa4 Frm_cmn01">
+                            </div> -->
+                            <!-- <div class="Fa4 Frm_cmn01">
                                 <label for="#">Service</label>
                                 <select name="Selectservice" id="Category2">
                                     <option value="#">
@@ -535,12 +534,12 @@
                                         Lorem, ipsum.
                                     </option>
                                 </select>
-                            </div>
+                            </div> -->
                             <div class="Fa5 Frm_cmn01">
                                 <label for="#">Email id</label>
                                 <input type="email" name="email" id="email1" placeholder="Email id" autocapitalize="off">
                             </div>
-                            <div class="Fa6 Frm_cmn01">
+                            <!-- <div class="Fa6 Frm_cmn01">
                                 <label for="#">City</label>
                                 <select name="city" id="Category3">
                                     <option value="#">
@@ -553,8 +552,8 @@
                                         gurugram
                                     </option>
                                 </select>
-                            </div>
-                            <div class="Fa7 Frm_cmn01">
+                            </div> -->
+                            <!-- <div class="Fa7 Frm_cmn01">
                                 <label for="#">Center</label>
                                 <select name="Center" id="Category3">
                                     <option value="#">
@@ -567,7 +566,7 @@
                                         gurugram
                                     </option>
                                 </select>
-                            </div>
+                            </div> -->
                             <div class="Fa8 Frm_cmn01">
                                <input type="submit" value="Submit">
                             </div>
@@ -576,11 +575,14 @@
                 </div>
             </div>
         </section>
-        <!--end---here -->
-            
+        <!--end---here -->  
    <!-- whats--appp--sticky -->
+   <div class="chat_img" id="chat_img">
+       <img src="image/chat-image.svg" alt="img">
+      <span id="close02" class="close02" role="button" onclick="document.getElementById('chat_img').style.display='none'" title="Close chat">X</span>
+  </div>
       <div class="wtsapp-sticky-wrp">
-        <a href="https://api.whatsapp.com/send?phone=919625001862" class="float" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=918826057629" class="float" target="_blank">
              <!-- <img src="image/Whatsapp1.png" alt="img"> -->
              <i class="fab fa-whatsapp my-float"></i>
         </a>
@@ -609,7 +611,7 @@
      <!-- end --> 
 
         <!-- foooter-->
-              <footer>
+              <footer >
                   <div class="container">
                       <div class="mid-logo">
                           <figure>
