--- a/hairpigment.html
+++ b/hairpigment.html
@@ -251,15 +251,14 @@
                         <h2>Hair Pigmentation <span> Treatment </span></h2>
                     </div>
                     <div class="Slim_content">
-                        <p>
-                            Many women/men suffer from patchy or diffuse hair loss & hair thinning. The effects of hair loss in women can have a profound effect on their self-confidence. Robbed of her ‘crowning glory’ the emotional impact can exacerbate the trauma. 
-                        </p>
-                        <p>
-                            With the help of SMP, we can be creating an underlying effect, which creates the appearance of a natural, full head of hair. This is the ideal treatment for women. 
-                        </p>
-                        <p>
-                            Scalp Micropigmentation is perfect if you are a woman who is thinning on the top or across the crown section of your head. Many women need color added to their scalp to cover natural separations made from long hair. If one can see the scalp, SMP cover this up to allow for it to look healthy and full. Medlinks have worked with and treated much female alopecia. After SMP women can enjoy the freedom and confidence of no longer having to hide these areas under headwear or intricate styling.
-                        </p> 
+                       <p>
+                        Today hair loss is a significant problem among men and women. Hair loss can have intense effects on both men and women, lowering self-esteem and self-confidence. As it is called a King is worthless without his crown, so hair is your crown, and losing it can emotionally traumatize you. Is your crown falling apart? Come and get it back.
+                       </p>
+                       <p>
+                        We at cosset world offer an array of beauty and cosmetic services that will surely change your lifestyle. Our service of 
+                         <b> Hair Pigmentation </b>
+                         is notably prolific, adding stars to your look. We create such an underlying effect, which covers up the baldness and gives an appearance of a natural, full head hair. Scalp Pigmentation is perfect for hair thinning in areas around the crown portion of the head. If your scalp is visible through your hairs, SMP is capable of hiding them. This method is widely used and has zero side effect regardless of skin and hair type. 
+                       </p>
                     </div>
                 </div>
             </section> 
@@ -268,38 +267,52 @@
             <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp">
                 <div class="container">
                     <div class="Benefit-heading">
-                        <h2>Three Benefits of Hair  <span>Pigmentation treatment</span></h2>
+                        <h2> Benefits of Hair  <span>Pigmentation</span></h2>
                     </div>
                     <div class="Benefit-content Organic-Cnt Prp_hair"> 
                         <p>
-                            Scalp micro pigmentation (SMP) is a process of tattooing the scalp of your head in order to get a look at normally and naturally growing hair. Nowadays, this trend is becoming more and more popular, especially for bald men who want to maintain a closely cropped head with a stubble look. Scalp micro pigmentation is one innovative procedure used for covering widened scars from some previous hair transplant procedures. In other words, scalp micro-pigmentation is a procedure performed by professionals who use a special micro cosmetic tattoo technique in order to mimic hair follicles. 
-                        </p>
-                         <p>
-                            Scalp micro pigmentation is a quick treatment that will cover all bald areas on your scalp.
-                          </p>
-                          <p>
-                            SMP is a drug-free, non-surgical and scar-free treatment that gives instant results. So, if you have problems with hair thinning or suffer from hair loss, do not hesitate and find a reliable, reputable, and professional clinic. The scalp micro pigmentation process offers many benefits. Here are the top three ones.
-                          </p>
+                            <b>Hair Pigmentation</b> or <b>Scalp Micropigmentation </b>
+                            Micropigmentation (SMP) is an advanced method of cosmetic surgery (tattooing precisely). Being similar to traditional tattooing, it uses unique ways to cover your hair loss. This method is highly effective for bald people who want to keep a cropped head with a stubble look. Basically, in this process, the areas where the hair is thinning is targeted  and tattooed with special ink and specially designed tiny needles. The ink selected after examining the scalp and the hair colour, for the best possible result. This method is also applicable for hiding scars left over from a surgery or a wound. This treatment is quick, and results can be visible from the first visit. SMP is a totally drug-free, scar less and non-surgical treatment.
+                         </p>
+                        <p>Some of the benefits of SMP mentioned below-</p>
                        <div class="key-wrp">
                             <div class="key01">
-                            <h3>No Risk</h3>
-                                  <p>
-                                    The first great benefit of the scalp micro pigmentation treatment is that there is no risk of infection, incision and there is no pain because of the local anesthesia. You will not have to wait for the grafts to mature and grow in.
+                            <h3>Risk-Free </h3>
+                                 <p>
+                                     The topmost benefit of SMP is that it is totally free of risks like infections, incision. There is no pain during the process due to the use of local anaesthesia. You don't have to wait for the grafts to evolve and grow. 
                                  </p>
                             </div>
                             <div class="key01">
-                                <h3>Cost-Effective </h3>
-                                <p>
-                                    When compared to hair transplantation, scalp micro pigmentation costs less, about 1/3 less than a surgical hair transplantation. With scalp micro pigmentation there is no need to use medications.
-                                </p>
+                                <h3>Cost-Effective  </h3>
+                                 <p>
+                                    Unlike hair transplant, 
+                                    <b>
+                                        scalp micropigmentation cost 
+                                    </b> 
+                                    is drastically low. When comparing both treatments, scalp micropigmentation costs 1/3 less than a surgical hair transplant. With scalp micropigmentation, there is no need for any kind of medication
+                                 </p>
                             </div>
                             <div class="key01">
-                                <h3>Fast Healing Time </h3>
-                                <p>
-                                    Scalp micro pigmentation offers you fast healing process, which is usually from 2 to 4 days. Almost all patients are able to return to their normal activities within 2 days. What is most important, it can be updated and color restored regardless of your previous color. The color can be altered depending on the client’s needs and desires.
-                                </p>
+                                <h3>Faster Healing Time  </h3>
+                                 <p>
+                                    Scalp micropigmentation grants you a swifter healing process, usually from 2-4 days. You can easily return to your daily routine within two days. You will only need to revisit for touch-ups approximately every 12 months. The important thing to note is that colour can be altered according to clients need and requirements.
+                                 </p>
                             </div> 
                          </div>
+                    </div>
+                </div>
+            </section>
+            <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp HairPigment_wrp">
+                <div class="container">
+                    <div class="Benefit-heading">
+                        <h2>Why   <span>Choose Us?</span> </h2>
+                    </div>
+                    <div class="Benefit-content Organic-Cnt Prp_hair"> 
+                     <p>
+                        Cosset World is the leading company in north India specializing in Beauty, Wellness, Cosmetic Dermatology and Aesthetic Care. We provide a one-stop solution for all your problems in a go. Our brand is well known for
+                      <b>scalp micropigmentation clinic </b>
+                      in all over India and abroad. Book your appointment now to qualify for ongoing bonus programs and discounts.
+                    </p> 
                     </div>
                 </div>
             </section>
